TAG: mrkcoordload-5-1-1-2
DATE: 11/09/2012
STAFF: sc
RELEASE: C4AM/B38
CHANGES: removed some debug 

TAG: mrkcoordload-5-1-1-1
DATE: 11/07/2012
STAFF: sc
RELEASE: dev C4AM/B38
CHANGES: US 175 - n-m mirbase IDs
1) bin/mrkcoordQC.py - other mkr report, tab-delim and add 'tab-delim' to report header
2) bin/mrkcoordQC.sh - build= must start header line

TAG: mrkcoordload-5-0-0-14
DATE: 10/31/2012
STAFF: sc
RELEASE: dev C4AM/B38
CHANGES: US 175 - n-m mirbase IDs
1) mrkcoordload.sh - rm checkMirbaseIDS function (this functionality moved to 
     mrkcoordQC.py), added mirbase dup and other mkr reports to RPT_LIST
2) index.html - added
3) mrkcoordload.config.default - added mirbase dup and other mkr reports
4) createInputFiles.py - delete mirbase ID only from marker in input NOT from
	all markers in DB. Commented that column 8 may now be multi-valued
5) mrkcoordQC.py - added mirbase dup and other mkr reports, updated the delete report

TAG: mrkcoordload-5-0-0-13
DATE: 10/23/2012
STAFF: sc
RELEASE: dev
CHANGES: createInputFiles.py - update to  use INPUT_FILE_LOAD
	(from INPUT_FILE_DEFAULT which was being used prior
	to the QC scripts creating INPUT_FILE_LOAD)

TAG: mrkcoordload-5-0-0-12
DATE: 10/15/2012
STAFF: sc
RELEASE: dev
CHANGES: 
1) Daves changes for US10 mirbase QC
2) Jon changes to publish
2) createInputFiles.py - delete mirbase ID from all markers, not just marker in the input
3) mrkcoordload.sh - uncomment checking for lastrun file

TAG: mrkcoordload-5-0-0-11
TAG: mrkcoordload-5-0-0-10
DATE: 8/22/2012
STAFF: sc
RELEASE: dev
CHANGES: US 35 - add mirbase ids
1) assocload.config - set delete/reload to false because this deletes
   all associations for the load user
2) createInputFiles.py - query was selecting mbID instead of mgiID
   added explicit setting of user and passwork in python db module
3) assocload.config - use DATALOADSOUTPUT

TAG: mrkcoordload-5-0-0-9
TAG: mrkcoordload-5-0-0-8
DATE: 8/21/2012
STAFF: sc
RELEASE: dev
CHANGES: US 35 - add mirbase ids